# person-reidentification

./: ProjectHome.md
reidentifier/: .gitignore  CMakeLists.txt  configure
reidentifier/include/: AttributeDetector.h  ColorSignature.h  DlibSvm.h  Environment.h  FaceDescriptor.h  FeatureExtractor.h  Histogram.h  HogFeatureExtractor.h  Identifier.h  Identity.h  LibsvmSvm.h  OcvSvm.h  PHogFeatureExtractor.h  PartDetector.h  Parts.h  PersonDetector.h  SiftFeatureExtractor.h  Svm.h  Typedefs.h  Util.h
reidentifier/libsvm/: libSvm.cpp
reidentifier/results/a_detections/: auroc  gen_roc.py  hasGlasses.csv  hasGlasses_linear_hog_only.csv  hasGlasses_linear_phog_only.csv  hasGlasses_linear_sift_only.csv  hasGlasses_linear_sift_unquantized_only.csv  hasGlasses_phog_linear.csv  hasGlasses_poly_sift_only.csv  hasGlasses_rbf_phog.csv  hasGlasses_rbf_phog_only.csv  hasGlasses_rbf_sift_only.csv  hasHat.csv  hasHat_linear_hog_only.csv  hasHat_linear_phog_only.csv  hasHat_linear_sift_only.csv  hasHat_linear_sift_unquantized_only.csv  hasHat_phog_linear.csv  hasHat_poly_sift_only.csv  hasHat_rbf_phog.csv  hasHat_rbf_phog_only.csv  hasHat_rbf_sift_only.csv  hasJeans.csv  hasJeans_linear_hog_only.csv  hasJeans_linear_phog_only.csv  hasJeans_linear_sift_only.csv  hasJeans_linear_sift_unquantized_only.csv  hasJeans_phog_linear.csv  hasJeans_poly_sift_only.csv  hasJeans_rbf_phog.csv  hasJeans_rbf_phog_only.csv  hasJeans_rbf_sift_only.csv  hasLongHair.csv  hasLongHair_linear_hog_only.csv  hasLongHair_linear_phog_only.csv  hasLongHair_linear_sift_only.csv  hasLongHair_linear_sift_unquantized_only.csv  hasLongHair_phog_linear.csv  hasLongHair_poly_sift_only.csv  hasLongHair_rbf_phog.csv  (+52 more)
reidentifier/results/main/: lab_rates.gp  success_rates_lab.csv  success_rates_lab_weighted.csv  success_rates_viper.csv  success_rates_viper_weighted.csv  (+1 more)
reidentifier/src/: AttributeDetector.cpp  ColorSignature.cpp  DlibSvm.cpp  FeatureExtractor.cpp  HogFeatureExtractor.cpp  Identifier.cpp  LibsvmSvm.cpp  OcvSvm.cpp  PHogFeatureExtractor.cpp  PartDetector.cpp  PersonDetector.cpp  SiftFeatureExtractor.cpp  Util.cpp  a_trainer.cpp  c_analysis.cpp  f_trainer.cpp  main.cpp  parts_detect.cpp
(+87 files in other folders)
